--- a/gazebo_plugins/package.xml
+++ b/gazebo_plugins/package.xml
@@ -1,6 +1,9 @@
+
+<!--          ROS1 Code        -->
+<!--
 <package>
   <name>gazebo_plugins</name>
-  <version>2.5.8</version>
+  <version>2.6.0</version>
   <description>
     Robot-independent Gazebo plugins for sensors, motors and dynamic reconfigurable components.
   </description>
@@ -19,7 +22,7 @@
 
   <build_depend>gazebo_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>libgazebo7-dev</build_depend>
+  <build_depend>libgazebo5-dev</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>trajectory_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
@@ -32,6 +35,7 @@
   <build_depend>tf</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
+  <build_depend>driver_base</build_depend>
   <build_depend>rosgraph_msgs</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>rosconsole</build_depend>
@@ -45,11 +49,13 @@
   <run_depend>gazebo_msgs</run_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  -->
   <!--
-    Need to use libgazebo7-dev since run script needs pkg-config
+    Need to use libgazebo5-dev since run script needs pkg-config
     See: https://github.com/ros-simulation/gazebo_ros_pkgs/issues/323 for more info
   -->
-  <run_depend>libgazebo7-dev</run_depend>
+<!--
+  <run_depend>libgazebo5-dev</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>trajectory_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
@@ -62,6 +68,7 @@
   <run_depend>tf</run_depend>
   <run_depend>tf2_ros</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
+  <run_depend>driver_base</run_depend>
   <run_depend>rosgraph_msgs</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>rosconsole</run_depend>
@@ -70,9 +77,105 @@
   <run_depend>polled_camera</run_depend>
   <run_depend>camera_info_manager</run_depend>
   <run_depend>std_msgs</run_depend>
-
+-->
   <!-- When moved to format 2, this can be turned test_depend -->
+<!--
   <build_depend>rostest</build_depend>
   <run_depend>rostest</run_depend>
 
+</package>
+-->
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="2">
+  <name>gazebo_plugins</name>
+  <version>2.6.0</version>
+  <description>
+    Robot-independent Gazebo plugins for sensors, motors and dynamic reconfigurable components.
+  </description>
+  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>
+
+  <license>BSD, Apache 2.0</license>
+
+  <url type="website">http://gazebosim.org/tutorials?cat=connect_ros</url>
+  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros_pkgs/issues</url>
+  <url type="repository">https://github.com/ros-simulation/gazebo_ros_pkgs</url>
+
+  <author>John Hsu</author>
+
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+
+  <build_depend>gazebo_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>libgazebo7-dev</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>trajectory_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
+  <build_depend>rclpp</build_depend>
+  <build_depend>rclpy</build_depend>
+ # <build_depend>nodelet</build_depend>
+ # <build_depend>angles</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <build_depend>urdf</build_depend>
+  <build_depend>tf2</build_depend>
+#  <build_depend>tf2_ros</build_depend>
+#  <build_depend>dynamic_reconfigure</build_depend>
+  <build_depend>driver_base</build_depend>
+#  <build_depend>rosgraph_msgs</build_depend>
+#  <build_depend>image_transport</build_depend>
+#  <build_depend>rosconsole</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>cv_bridge</build_depend>
+  <build_depend>polled_camera</build_depend>
+  <build_depend>diagnostic_updater</build_depend>
+  <build_depend>camera_info_manager</build_depend>
+  <build_depend>rmw_implementation</build_depend>
+  <build_depend>rmw_implementation_cmake</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
+  
+  <exec_depend>gazebo_msgs</exec_depend>
+  <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  
+  <exec_depend>libgazebo7-dev</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>trajectory_msgs</exec_depend>
+  <exec_depend>std_srvs</exec_depend>
+  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>rclpy</exec_depend>
+#  <exec_depend>nodelet</exec_depend>
+#  <exec_depend>angles</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
+  <exec_depend>urdf</exec_depend>
+  <exec_depend>tf2</exec_depend>
+#  <exec_depend>tf2_ros</exec_depend>
+#  <exec_depend>dynamic_reconfigure</exec_depend>
+  <exec_depend>driver_base</exec_depend>
+#  <exec_depend>rosgraph_msgs</exec_depend>
+#  <exec_depend>image_transport</exec_depend>
+#  <exec_depend>rosconsole</exec_depend>
+#  <exec_depend>message_generation</exec_depend>
+  <exec_depend>cv_bridge</exec_depend>
+  <exec_depend>polled_camera</exec_depend>
+  <exec_depend>camera_info_manager</exec_depend>  
+  <exec_depend>rmw_implementation</exec_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+
+  <test_depend>ament_cmake_nose</test_depend>
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+  <test_depend>launch</test_depend>
+  <test_depend>launch_testing</test_depend>
+  <test_depend>rclcpp</test_depend>
+  <test_depend>rmw_implementation</test_depend>
+  <test_depend>rosidl_default_generators</test_depend>
+  <test_depend>rosidl_default_runtime</test_depend>
+  
+
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
